# wallguard-server

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  docker-compose.yml
.github/workflows/: rust.yml
dev/: cert.pem  key.pem
libwallguard/: CHANGELOG.md  Cargo.toml
libwallguard/src/: lib.rs
libwallguard/src/proto/: mod.rs  wallguard.rs  wallguard.service.rs  wallguard_authorization.rs  wallguard_commands.rs  wallguard_service.rs
proto/: authorization.proto  commands.proto  dna_store.proto  name.proto  wallguard.proto
src/: app_context.rs  cli.rs  datastore.rs  grpc_impl.rs  grpc_server.rs  lib.rs  main.rs  message_handler.rs  ssh_keypair.rs  utils.rs
src/client_stream/: auth_stream.rs  manager.rs  mod.rs
src/control_service/: config.rs  ensure_device_exists_and_authrorized.rs  mod.rs  service.rs
src/control_service/rpc/: control_channel.rs  device_authorization.rs  get_device_settings.rs  handle_config_data.rs  handle_packets_data.rs  handle_system_resources_data.rs  mod.rs
src/datastore/: auth.rs  client.rs  config.rs  db_tables.rs  mod.rs  token.rs
src/datastore/builders/: advanced_filter_builder.rs  batch_create_request_builder.rs  batch_update_request_builder.rs  create_request_builder.rs  delete_request_builder.rs  get_by_filer_request_builder.rs  get_by_id_request_builder.rs  login_request_builder.rs  mod.rs  register_device_request_builder.rs  register_request_builder.rs  update_request_builder.rs
src/datastore/features/: common.rs  config_upload.rs  connections_insert.rs  create_ssh_keypair_if_not_exists.rs  device_fetch_webgui_protocol.rs  device_new_remote_session.rs  device_setup.rs  device_status.rs  device_terminate_remote_session.rs  fetch_ssh_keypair_for_device.rs  heartbeat.rs  ip_info.rs  login.rs  logs_insert.rs  mod.rs  packets_insert.rs  system_resources_insert.rs  utils.rs
src/datastore/features/config_upload/: insert_iface_result.rs  insert_interfaces.rs  latest_config_info.rs  mod.rs  utils.rs
src/datastore/features/heartbeat/: latest_device_info.rs  mod.rs
src/datastore/models/: device.rs  device_configuration.rs  device_credentials.rs  installation_code.rs  mod.rs  remote_access_session.rs  ssh_keypair.rs
src/datastore/operations/: activate_account_organization.rs  create_aliases.rs  create_config.rs  create_connections.rs  create_dev_account.rs  create_device.rs  create_device_credentials.rs  create_interfaces.rs  create_ip_info.rs  create_org_account.rs  create_rules.rs  create_session.rs  create_ssh_keypair.rs  create_system_resources.rs  device_credentials.rs  is_ip_info_stored.rs  login.rs  mod.rs  obtain_config.rs  obtain_device.rs  obtain_installation_code.rs  obtain_session.rs  obtain_ssh_keypair.rs  redeem_installation_code.rs  register_device.rs  update_config.rs  update_device.rs
src/grpc_server/: common.rs  mod.rs  request_log.rs  server.rs
src/grpc_server/endpoints/: authenticate.rs  common.rs  device_status.rs  handle_config.rs  handle_logs.rs  handle_packets.rs  handle_system_resources.rs  heartbeat.rs  login.rs  mod.rs  request_control_channel.rs  setup.rs
src/http_proxy/: config.rs  mod.rs
src/http_proxy/api/: authorize_device.rs  enable_config_monitoring.rs  enable_telemetry_monitoring.rs  enable_traffic_monitoring.rs  mod.rs  request_session.rs
src/http_proxy/proxy/: mod.rs  request.rs
src/http_proxy/ssh_gateway/: helpers.rs  mod.rs  relay.rs  ssh_session.rs
src/http_proxy/tty_gateway/: mod.rs  relay.rs
src/http_proxy/utilities/: authorization.rs  error_json.rs  mod.rs  request_handling.rs  tunneling.rs
src/http_server/: common.rs  get_addr.rs  mod.rs  remote_access_request.rs  remote_access_session.rs  remote_access_terminate.rs  state.rs
src/http_server/proxy/: auth.rs  http_proxy.rs  mod.rs  not_found.rs  ws_proxy.rs
src/http_server/proxy/http/: cert_verifier.rs  convert_request.rs  convert_response.rs  mod.rs
src/http_server/proxy/websocket/: convert_message.rs  mod.rs  proxy_message.rs  proxy_websocket.rs  stop_message.rs
src/http_server/ssh_gateway/: mod.rs  session.rs  ssh_message.rs  stop_message.rs
src/orchestrator/: auth_request_handler.rs  authorization_stream.rs  client.rs  control_channel.rs  control_stream.rs  mod.rs  new_connection_handler.rs  stream.rs
src/parser/: connections_map.rs  ip_header.rs  ip_info.rs  mod.rs  msg_parser.rs  parsed_message.rs  transport_header.rs
src/parser/models/: mod.rs
src/parser/models/ether/: header.rs  mod.rs  type.rs
src/parser/models/ip/: header.rs  mod.rs  protocol.rs
src/parser/models/transport/: header.rs  mod.rs
src/parser/models/transport/icmp/: header.rs
src/parser/models/transport/tcp/: header.rs
src/parser/models/transport/udp/: header.rs
src/proto/: dna_store.rs  mod.rs  name.rs  wallguard.rs
src/protocol/: mod.rs  wallguard_commands.rs  wallguard_service.rs
src/reverse_tunnel/: config.rs  mod.rs  tunnel_token.rs
src/token_provider/: data.rs  mod.rs  models.rs  token.rs
src/traffic_handler/: connections_map.rs  ip_header.rs  ip_info.rs  mod.rs  msg_parser.rs  parsed_message.rs  transport_header.rs
src/tunnel/: client_profile.rs  config.rs  mod.rs  monitor.rs  profile_ex.rs  ra_type.rs  utils.rs
src/utilities/: hash.rs  json.rs  mod.rs  random.rs  ssh.rs
tls/: wallmon-key.pem  wallmon.pem
