[package]
name = "wallguard-server"
version = "1.0.0"
edition = "2024"
authors = [
    "Giuliano Bellini <gyulyvgc99@gmail.com>", 
    "Anton Liashkevich <anton.liashkevich.eng@gmail.com>"
]
description = "A centralized management system for Nullnet agents"
readme = "README.md"
#homepage = ""
repository = "https://github.com/NullNet-ai/wallguard-server"
#documentation = ""
license = "AGPL-3.0-only"
keywords = ["firewall", "network", "manager", "centralized", "monitor", "agent"]
categories = ["network-programming"]
publish = false

[profile.release]
opt-level = 3
lto = true
strip = true

[dependencies]
nullnet-liberror = "0.1.1"
nullnet-libdatastore = "0.4.4"
tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
tonic = { version = "0.13.1", features = ["_tls-any", "tls-native-roots"] }
prost = "0.13.5"
log = "0.4.27"
env_logger = "0.11.8"
nullnet-libtoken = "0.2.0"


[build-dependencies]
tonic-build = "0.13.1"

[badges]
maintenance = { status = "actively-developed" }
