[package]
name = "wallguard-server"
version = "1.0.0"
edition = "2024"
authors = [
    "Giuliano Bellini <gyulyvgc99@gmail.com>", 
    "Anton Liashkevich <anton.liashkevich.eng@gmail.com>"
]
description = "A centralized management system for Nullnet agents"
readme = "README.md"
#homepage = ""
repository = "https://github.com/NullNet-ai/wallguard-server"
#documentation = ""
license = "AGPL-3.0-only"
keywords = ["firewall", "network", "manager", "centralized", "monitor", "agent"]
categories = ["network-programming"]
publish = false

[profile.release]
opt-level = 3
lto = true
strip = true

[dependencies]
nullnet-liberror = "0.1.1"
nullnet-libdatastore = "0.4.4"
tokio = { version = "1.45.0", features = ["full"] }
tonic = { version = "0.13.1", features = ["_tls-any", "tls-native-roots"] }
prost = "0.13.5"
log = "0.4.27"
env_logger = "0.11.8"
nullnet-libtoken = "0.2.0"
rand = "0.9.1"
sha2 = "0.10.9"
actix-web = "4.11.0"
actix-cors = "0.7.1"
actix-ws = "0.3.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
async-ssh2-lite = { version = "0.5.0", features = ["async-io", "tokio"] }
futures-util = "0.3.31"
rustls = "0.23.27"
tokio-rustls = "0.26.2"
webpki-roots = "1.0.0"
hyper = { version = "1.6.0", features = [ "client", "http1", "http2" ] }
hyper-util = { version = "0.1.10", features = ["client", "client-legacy", "http1"] }
http-body-util = "0.1.3"
argon2 = "0.5.3"
chrono = "0.4.41"
etherparse = "0.18.0"
nullnet-libipinfo = "0.2.0"
indexmap = "2.9.0"
nullnet-libfireparse = "0.3.3"
md5 = "0.7.0"


[build-dependencies]
tonic-build = "0.13.1"

[badges]
maintenance = { status = "actively-developed" }
